<resources>
    <!-- CONSTANTES DE NOMES DO APP -->

    <string name="app_name">OBS</string>
    <string name="app_name_sigla">White Martins - UC20</string>
    <string name="app_full_name">On Board Computer</string>

    <!-- CONSTANTES CONFIRMACAO DE VIAGEM -->
    <string name="confirm_travel_data">CONFIRMA DADOS DA VIAGEM</string>
    <string name="num_travel">NÚMERO DA VIAGEM</string>
    <string name="travel_date">DATA VIAJEM</string>
    <string name="num_vehicle">NUM. VEÍCULO</string>
    <string name="unit">UNIDADE</string>
    <string name="rout_num">NUM. ROTA</string>
    <string name="driver">MOTORISTA</string>
    <string name="confirm">CONFIRMAR</string>
    <string name="cancel">CANCELAR VIAGEM</string>

    <!-- CONSTANTES CONFIRMACAO DE VIAGEM -->
    <string name="customer_service">ATENDICMENTO AO CLIENTE</string>
    <string name="transfers_stock">TRANSFERE ESTOQUE</string>
    <string name="reporting">EMISSÃO DE RELATÓRIOS</string>
    <string name="end_travel">FIM DA VIAGEM</string>
    <string name="settings">CONFIGURAÇÃO</string>
    <string name="remake_travel">REFAZER VIAGEM</string>


</resources>
